<resources>
	<string name="app_name">Art My Breath</string>
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="emailHint">Enter your email</string>
	<string name="appWideFont">casual</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirmPassword">Confirm Password</string>
	<string name="passwordHint">Enter your password</string>
	<string name="firstName">First Name</string>
	<string name="searchResults">Search Results</string>
	<string name="memberName">Member Name</string>
	<string name="lastName">Last Name</string>
	<string name="phoneNumber">Phone Number</string>
	<string name="memberSignUp"><u>Not a member? Register here!</u></string>
	<string name="logout">Logout</string>
	<string name="playQuiz">Play Quiz</string>
	<string name="createQuiz">Create Quiz</string>
	<string name="quizTitle">Quiz Title</string>
	<string name="questionTitle">Question</string>
	<string name="choiceOne">Choice One</string>
	<string name="choiceTwo">Choice Two</string>
	<string name="choiceThree">Choice Three</string>
	<string name="choiceFour">Choice Four</string>
	<string name="digitOne">1</string>
	<string name="digitTwo">2</string>
	<string name="digitThree">3</string>
	<string name="digitFour">4</string>
	<string name="start">Start</string>
	<string name="saveAndNext">Save and Next</string>
	<string name="saveAndFinish">Save and Finish</string>
	<string name="quizBy">Quiz By</string>
	<string name="questionCount">Questions</string>
	<string name="submitAnswer">Submit and Next</string>
	<string name="quiz">Quiz</string>
	<string name="navigationDrawerOpen">Drawer open</string>
	<string name="navigationDrawerClose">Drawer close</string>
	<string name="settings">Settings</string>
	<string name="artEvents">Art Events</string>
	<string name="artBlog">Art Blog</string>
	<string name="artJobs">Art Jobs</string>
	<string name="anonLogin"><u>Continue anonymously</u></string>
	<string name="guestUser">Guest User</string>
	<string name="loading">Loading . . . </string>
	<string name="fullName">Full name</string>
	<string name="updateProfile">Update profile</string>
	<string name="addPortfolio">Add portfolio</string>
	<string name="createPortfolio">Create portfolio</string>
	<string name="portfolios">Portfolios</string>
	<string name="selectCategory">Select category</string>
	<string name="selectSubCategory">Select sub-category</string>
	<string name="category">Category</string>
	<string name="phoneNumberUpdate">Phone Number</string>
	<string name="emailUpdate">Email</string>
	<string name="searchBy">Search By</string>
	<string name="saveChanges">Save Changes</string>
	<string name="description">Description</string>
	<string name="search">Search</string>
	<string name="eventTitle">Event title</string>
	<string name="eventVenue">Event venue</string>
	<string name="eventDate">Event date</string>
	<string name="eventTime">Event time</string>
	<string name="bookable">Bookable</string>
	<string name="publishable">Publishable</string>
	<string name="eventType">Event type</string>
	<string name="addEvent">Add Event</string>
	<string name="removeImage">Remove image</string>
	<string name="query">Query</string>
	<string name="chooseImage">Choose image</string>
	<string name="searchIn">Search in</string>
	<string name="yourProfile">Your Profile</string>
	<dimen name="smallFont">18sp</dimen>
	<dimen name="standardFont">25sp</dimen>
	<dimen name="largeFont">30sp</dimen>
	<dimen name="largerFont">36sp</dimen>
	<dimen name="largestFont">40sp</dimen>
	<dimen name="standardButton">28dp</dimen>

	<string name="testText">Hello and welcome to Art My Breath\nThis application is undergoing\ndevelopment. Please swipe from the\nleft side of the screen to begin"</string>
</resources>
