<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/createQuizLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/lightBlue"
	tools:context=".CreateQuizActivity">

	<LinearLayout
		android:id="@+id/quizTitleLinear"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<EditText
			android:id="@+id/quizTitleField"
			style="@style/stdEdtTextStyle"
			android:hint="@string/quizTitle" />

		<Button
			android:id="@+id/startButton"
			style="@style/stdButton"
			android:layout_gravity="center"
			android:layout_marginTop="50dp"
			android:gravity="center_horizontal"
			android:text="@string/start" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/quizFormLinear"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:alpha="0"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<EditText
			android:id="@+id/quizQuestionTitle"
			style="@style/stdEdtTextStyle"
			android:layout_marginTop="80dp"
			android:hint="@string/questionTitle" />

		<EditText
			android:id="@+id/choiceOneField"
			style="@style/stdEdtTextStyle"
			android:layout_marginTop="60dp"
			android:hint="@string/choiceOne" />

		<EditText
			android:id="@+id/choiceTwoField"
			style="@style/stdEdtTextStyle"
			android:layout_marginTop="15dp"
			android:hint="@string/choiceTwo" />

		<EditText
			android:id="@+id/choiceThreeField"
			style="@style/stdEdtTextStyle"
			android:layout_marginTop="15dp"
			android:hint="@string/choiceThree" />

		<EditText
			android:id="@+id/choiceFourField"
			style="@style/stdEdtTextStyle"
			android:layout_marginTop="15dp"
			android:hint="@string/choiceFour" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/choiceButtonLinear"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:alpha="0"
		android:orientation="horizontal"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/quizFormLinear">

		<Button
			android:id="@+id/correctAnsOne"
			style="@style/stdButton"
			android:layout_width="50dp"
			android:onClick="onAnswerSelected"
			android:text="@string/digitOne" />

		<Button
			android:id="@+id/correctAnsTwo"
			style="@style/stdButton"
			android:layout_width="50dp"
			android:layout_marginLeft="12dp"
			android:onClick="onAnswerSelected"
			android:text="@string/digitTwo" />

		<Button
			android:id="@+id/correctAnsThree"
			style="@style/stdButton"
			android:layout_width="50dp"
			android:layout_marginLeft="12dp"
			android:onClick="onAnswerSelected"
			android:text="@string/digitThree" />

		<Button
			android:id="@+id/correctAnsFour"
			style="@style/stdButton"
			android:layout_width="50dp"
			android:layout_marginLeft="12dp"
			android:onClick="onAnswerSelected"
			android:text="@string/digitFour" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/operationsButtonLinear"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:alpha="0"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/choiceButtonLinear">

		<Button
			android:id="@+id/nextButton"
			style="@style/stdButton"
			android:layout_gravity="center"
			android:text="@string/saveAndNext" />

		<Button
			android:id="@+id/finishButton"
			style="@style/stdButton"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			android:text="@string/saveAndFinish" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>