<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/yellow"
	android:id="@+id/playQuizActivityLayout"
	tools:context=".PlayQuizActivity">

	<TextView
		android:id="@+id/playQuizQuestion"
		style="@style/stdTextStyle"
		android:layout_width="match_parent"
		android:layout_marginTop="100dp"
		android:background="@color/darkPurple"
		android:text="@string/questionTitle"
		android:textAlignment="center"
		android:textColor="@color/white"
		android:textSize="@dimen/largerFont"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<RadioGroup
		android:id="@+id/quizAnswersRadioGroup"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="35dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/playQuizQuestion">

		<RadioButton
			android:id="@+id/answerOneRadio"
			style="@style/stdRadioButton"
			android:layout_gravity="center"
			android:text="@string/choiceOne" />

		<RadioButton
			android:id="@+id/answerTwoRadio"
			style="@style/stdRadioButton"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:text="@string/choiceTwo" />

		<RadioButton
			android:id="@+id/answerThreeRadio"
			style="@style/stdRadioButton"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:text="@string/choiceThree" />

		<RadioButton
			android:id="@+id/answerFourRadio"
			style="@style/stdRadioButton"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:text="@string/choiceFour" />

	</RadioGroup>

	<Button
		android:id="@+id/submitAnswer"
		style="@style/stdButton"
		android:layout_width="300dp"
		android:layout_marginTop="50dp"
		android:backgroundTint="@color/darkGray"
		android:elevation="7dp"
		android:text="@string/submitAnswer"
		android:textColor="@color/white"
		android:textStyle="bold"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/quizAnswersRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>