<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".RegisterActivity"
	android:background="@color/darkPurple"
	android:id="@+id/registerActivityLayout">

	<EditText
		android:id="@+id/firstNameField"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="80dp"
		android:inputType="text"
		android:hint="@string/firstName"
		style="@style/stdEdtTextStyle" />

	<EditText
		android:id="@+id/lastNameField"
		app:layout_constraintTop_toBottomOf="@id/firstNameField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:inputType="text"
		android:hint="@string/lastName"
		style="@style/stdEdtTextStyle"/>

	<EditText
		android:id="@+id/registerEmailField"
		app:layout_constraintTop_toBottomOf="@id/lastNameField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:inputType="textEmailAddress"
		android:hint="@string/email"
		style="@style/stdEdtTextStyle"/>

	<EditText
		android:id="@+id/registerPhoneField"
		app:layout_constraintTop_toBottomOf="@id/registerEmailField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:inputType="phone"
		android:hint="@string/phoneNumber"
		style="@style/stdEdtTextStyle"/>

	<EditText
		android:id="@+id/registerPasswordField"
		app:layout_constraintTop_toBottomOf="@id/registerPhoneField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:inputType="textPassword"
		android:hint="@string/password"
		style="@style/stdEdtTextStyle"/>

	<EditText
		android:id="@+id/confirmPasswordField"
		app:layout_constraintTop_toBottomOf="@id/registerPasswordField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:inputType="textPassword"
		android:hint="@string/confirmPassword"
		style="@style/stdEdtTextStyle"/>

	<Button
		android:id="@+id/registerButton"
		app:layout_constraintTop_toBottomOf="@id/confirmPasswordField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="50dp"
		android:text="@string/register"
		style="@style/userAuthButton"/>

	<ProgressBar
		android:id="@+id/registerProgressBar"
		app:layout_constraintTop_toBottomOf="@id/registerButton"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:indeterminateTint="@color/yellow"
		android:layout_marginTop="30dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>