<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/searchActivityScroll"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/red"
	tools:context=".SearchActivity">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/searchActivityConstraint"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/searchInLabel"
			style="@style/stdTextStyle"
			android:layout_width="match_parent"
			android:layout_marginTop="30dp"
			android:background="@color/yellow"
			android:text="@string/searchIn"
			android:textAlignment="center"
			android:textColor="@color/black"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<RadioGroup
			android:id="@+id/searchInRadio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchInLabel">

			<RadioButton
				android:id="@+id/portfolioRadio"
				style="@style/stdRadioButton"
				android:text="@string/portfolios" />

			<RadioButton
				android:id="@+id/artEventsRadio"
				style="@style/stdRadioButton"
				android:text="@string/artEvents" />

		</RadioGroup>

		<TextView
			android:id="@+id/searchByLabel"
			style="@style/stdTextStyle"
			android:layout_width="match_parent"
			android:layout_marginTop="30dp"
			android:background="@color/yellow"
			android:text="@string/searchBy"
			android:textAlignment="center"
			android:textColor="@color/black"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchInRadio" />

		<RadioGroup
			android:id="@+id/searchByPortfolio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchByLabel">

			<RadioButton
				android:id="@+id/memberNameRadio"
				style="@style/stdRadioButton"
				android:text="@string/memberName" />

			<RadioButton
				android:id="@+id/categoryRadio"
				style="@style/stdRadioButton"
				android:text="@string/category" />

		</RadioGroup>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/memberNameConstraint"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchByPortfolio">

			<EditText
				android:id="@+id/searchFirstName"
				style="@style/stdEditTextStyle"
				android:hint="@string/firstName"
				android:inputType="text"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<EditText
				android:id="@+id/searchLastName"
				style="@style/stdEditTextStyle"
				android:layout_marginTop="20dp"
				android:hint="@string/lastName"
				android:inputType="text"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/searchFirstName" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/searchSpinnerConstraint"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchByPortfolio">

			<TextView
				android:id="@+id/searchCategoryLabel"
				style="@style/stdTextStyle"
				android:layout_width="match_parent"
				android:background="@color/yellow"
				android:scrollHorizontally="false"
				android:text="@string/selectCategory"
				android:textAlignment="center"
				android:textColor="@color/black"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<Spinner
				android:id="@+id/searchCategorySpinner"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/searchCategoryLabel" />

			<TextView
				android:id="@+id/searchSubCategoryLabel"
				style="@style/stdTextStyle"
				android:layout_width="match_parent"
				android:layout_marginTop="20dp"
				android:background="@color/yellow"
				android:text="@string/selectSubCategory"
				android:textAlignment="center"
				android:textColor="@color/black"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/searchCategorySpinner" />

			<Spinner
				android:id="@+id/searchSubCategorySpinner"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="12dp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@id/searchSubCategoryLabel" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<Button
			android:id="@+id/searchButton"
			style="@style/stdButton"
			android:layout_width="120dp"
			android:layout_marginTop="230dp"
			android:text="@string/search"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchByPortfolio" />

		<TextView
			android:id="@+id/searchResultsLabel"
			style="@style/stdTextStyle"
			android:layout_width="match_parent"
			android:layout_marginTop="30dp"
			android:background="@color/yellow"
			android:text="@string/searchResults"
			android:textAlignment="center"
			android:textColor="@color/black"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/searchButton" />

		<ListView
			android:id="@+id/searchResultsList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:layout_constraintTop_toBottomOf="@id/searchResultsLabel" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>