<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/lightBlue"
	tools:context=".ProfileActivity">

	<LinearLayout
		android:id="@+id/fullNameLinear"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="60dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/profileNameLabel"
			android:text="@string/fullName"
			style="@style/stdTextStyle"/>

		<TextView
			android:id="@+id/profileNameField"
			android:text="@string/fullName"
			android:layout_marginLeft="10dp"
			style="@style/stdTextStyle"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/emailLinear"
		app:layout_constraintTop_toBottomOf="@id/fullNameLinear"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/profileEmailLabel"
			android:text="@string/email"
			android:layout_gravity="center"
			style="@style/stdTextStyle"/>

		<TextView
			android:id="@+id/profileEmailField"
			android:text="@string/emailHint"
			style="@style/stdTextStyle"/>

	</LinearLayout>

	<Button
		android:id="@+id/updateProfileButton"
		app:layout_constraintTop_toBottomOf="@id/emailLinear"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="50dp"
		android:layout_width="200dp"
		android:text="@string/updateProfile"
		style="@style/stdButton"/>

	<TextView
		android:id="@+id/portfoliosLabel"
		app:layout_constraintTop_toBottomOf="@id/updateProfileButton"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="30dp"
		android:text="@string/portfolios"
		style="@style/stdTextStyle"/>

	<ListView
		android:id="@+id/portfoliosList"
		android:divider="@color/darkGray"
		android:dividerHeight="2dp"
		android:layout_width="match_parent"
		android:layout_height="190dp"
		app:layout_constraintTop_toBottomOf="@id/portfoliosLabel"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="30dp"/>

	<Button
		android:id="@+id/addPortfolioButton"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginBottom="50dp"
		android:layout_width="190dp"
		android:text="@string/addPortfolio"
		style="@style/stdButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>