<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/homeScreenLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/darkPurple"
	tools:context=".HomeScreen">

	<ImageView
		android:id="@+id/homeScreenAppIcon"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_marginTop="30dp"
		android:src="@drawable/ic_launcher"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/gridLayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:orientation="vertical"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/homeScreenAppIcon">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/yourProfileButton"
				android:backgroundTint="@color/lightBlue"
				style="@style/gridButton"
				android:text="@string/yourProfile" />

			<Button
				android:backgroundTint="@color/red"
				android:id="@+id/homeScreenSearchButton"
				style="@style/gridButton"
				android:layout_marginLeft="10dp"
				android:text="@string/search" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/openEventsButton"
				android:backgroundTint="@color/orange"
				style="@style/gridButton"
				android:text="@string/artEvents" />

			<Button
				android:id="@+id/addEventsButton"
				style="@style/gridButton"
				android:backgroundTint="@color/yellow"
				android:layout_marginLeft="10dp"
				android:text="@string/addEvent" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/playQuizButton"
				style="@style/gridButton"
				android:text="@string/playQuiz" />

			<Button
				android:id="@+id/createQuizButton"
				style="@style/gridButton"
				android:textColor="@color/white"
				android:backgroundTint="@color/darkBlue"
				android:layout_marginLeft="10dp"
				android:text="@string/createQuiz" />

		</LinearLayout>

	</LinearLayout>

	<Button
		android:id="@+id/logoutButton"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/gridLayout"
		android:layout_marginTop="60dp"
		style="@style/logoutButton"
		android:backgroundTint="@color/yellow"/>

</androidx.constraintlayout.widget.ConstraintLayout>