<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LoginActivity"
	android:background="@color/darkPurple"
	android:id="@+id/loginActivityLayout">

	<ImageView
		android:id="@+id/loginSplash"
		android:layout_width="150dp"
		android:layout_height="170dp"
		android:background="@drawable/ic_launcher"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginTop="50dp"/>

	<EditText
		android:id="@+id/loginEmailField"
		app:layout_constraintTop_toBottomOf="@id/loginSplash"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="40dp"
		android:hint="@string/emailHint"
		android:inputType="textEmailAddress"
		style="@style/stdEdtTextStyle"/>

	<EditText
		android:id="@+id/loginPasswordField"
		app:layout_constraintTop_toBottomOf="@id/loginEmailField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="20dp"
		android:hint="@string/passwordHint"
		android:inputType="textPassword"
		style="@style/stdEdtTextStyle"/>

	<Button
		android:id="@+id/loginButton"
		app:layout_constraintTop_toBottomOf="@id/loginPasswordField"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="50dp"
		android:text="@string/login"
		style="@style/userAuthButton"/>

	<TextView
		android:id="@+id/memberSignUpLabel"
		app:layout_constraintTop_toBottomOf="@id/loginButton"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="30dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/memberSignUp"
		android:textColor="@color/white"
		android:textSize="@dimen/smallFont"
		style="@style/stdTextStyle"/>

	<ProgressBar
		android:id="@+id/loginProgressBar"
		app:layout_constraintTop_toBottomOf="@id/memberSignUpLabel"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:indeterminateTint="@color/yellow"
		android:layout_marginTop="30dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>