<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/orange">

	<ImageView
		android:id="@+id/eventBanner"
		android:layout_width="130dp"
		android:layout_height="130dp"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:background="@color/darkBlue" />

	<TextView
		android:id="@+id/eventTitleLabel"
		style="@style/stdTextStyle"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="10dp"
		android:layout_toRightOf="@id/eventBanner"
		android:background="@color/darkBlue"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:text="@string/eventTitle"
		android:textColor="@color/white" />

	<TextView
		android:id="@+id/eventListDateLabel"
		style="@style/stdTextStyle"
		android:layout_below="@id/eventTitleLabel"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="5dp"
		android:layout_toRightOf="@id/eventBanner"
		android:background="@color/darkBlue"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:text="@string/eventDate"
		android:textColor="@color/white" />

	<TextView
		android:id="@+id/eventVenueLabel"
		style="@style/stdTextStyle"
		android:textSize="@dimen/smallFont"
		android:layout_below="@id/eventListDateLabel"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="5dp"
		android:layout_toRightOf="@id/eventBanner"
		android:background="@color/darkBlue"
		android:paddingLeft="8dp"
		android:paddingRight="8dp"
		android:text="@string/eventVenue"
		android:textColor="@color/white" />

</RelativeLayout>